--- a/pom.xml
+++ b/pom.xml
@@ -20,29 +20,16 @@
 	</properties>
 
 	<dependencies>
-		<!-- Spring -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-hateoas</artifactId>
-		</dependency>
-
 		<!-- Other -->
 		<dependency>
 			<groupId>com.discord4j</groupId>
 			<artifactId>discord4j-gateway</artifactId>
 			<version>3.1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>skaro.pokedex</groupId>
+			<artifactId>sdk</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Test -->
