Created basic Dockerfile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=80
 
-discord.token=
+discord.token=${DISCORD_TOKEN}
 
-discord.shard-index=
-discord.shard-count=
+discord.shard-index=${SHARD_INDEX}
+discord.shard-count=${SHARD_COUNT}
 
 discord.gateway-base-uri=wss://gateway.discord.gg
 discord.gateway-params.v=6
